--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
+    "@mui/x-charts": "^7.3.0",
     "@mui/x-date-pickers": "^7.2.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
